[package]
name = "indoor-maps-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "indoor_maps"
crate-type = ["staticlib", "cdylib"] # For iOS and Android

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# Add other dependencies for mapping, positioning, etc.

[build-dependencies]
cbindgen = "0.24.0"